--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,22 +1,26 @@
-Thank you to my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship throughout.
+I would express my gratitude to Seth Flaxman and Jeff Eaton for their mentorship throughout my time as a graduate student.
+Their guidance has been crucial in shaping the direction of this thesis, and my development as a scientist.
 <!-- Thanks to my examiners Adam Sykulski and Chris Paciorek. -->
-Thanks to the HIV Inference Group at Imperial for tolerating a mathematician, and helping me learn to present my research.
-I am grateful to have been a part of the research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford and the Machine Learning and Global Health Network.
+I am grateful to the HIV Inference Group at Imperial for exposing me to research focused on providing actionable evidence, helping me learn to present my research, and tolerating a mathematician.
+Research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford and the Machine Learning and Global Health Network.
+This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
+
 Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
-I returned from Boston stand-up meeting and Google document in hand.
-<!-- Boston: Lenni, Lenny, Simon, Janika, Geetha, Frances, Leilani, Tammy. -->
+Thanks also to the friends I met in Cambridge: Lenni, Lenny, Janika, Geetha, Simon, Frances, Leilani and Tammy.
+I returned from Cambridge stand-up meeting, Google document, and raised aspirations in hand.
+
 Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science, for hosting my visit to the University of Waterloo.
 Without Alex, Chapter \@ref(naomi-aghq) wouldn't have gotten anywhere, and I'd still be waiting for MCMC to converge in Chapter \@ref(beyond-borders).
 Thanks to Tim Lucas and Patrick Brown for connecting us.
-Håvard Rue and Finn Lindgren gave helpful answers on the `R-INLA` discussion group.
+Thanks also to my tour guide in Waterloo, Kate.
+I would also like to express my thanks to Håvard Rue and Finn Lindgren for their helpful answers on the `R-INLA` discussion group.
+
 My sense for what matters has been shaped, and arguably improved, by the Effective Altruism community.
 Thank you to the Meridian, Trajan, and LEAH offices for hosting me this final year.
-Pınar believed in me and my research at times when I didn't.
 Thank you to my housemates August, Dewi, Henry, Jerome, Johnny, and Tamara: not to be all Bay area, but I'm proud of the intentional community we've built.
+Pınar believed in me and my research at times when I didn't.
 No thanks to Simon Marshall, he didn't help, if anything he held me back.
-This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
-<!-- Parents: Deborah, Karl. -->
-<!-- Grandparents: Kath, Tony. -->
+I extend my deepest thanks to my parents, Deborah and Karl, and my grandparents, Kath and Tony, whose love and support have granted me the privilege of purusing my interests.
 
 \begin{flushright}
 Adam Howes \\
