Add front matter to spell checker, and a little more conclusions section

--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -19,7 +19,7 @@ bibliography: references.bib
 
 <!-- JWE: Minor corrections often involve (1) fixing typos, (2) clarifying things, (3) elaborating on the contributions to science and implications of the PhD in the conclusions chapter [by far the most common point of examiner feedback] -->
 
-To conclude the thesis, this chapter discusses the most important contributions, limitations, promising avenues for future work, and broader reflections about the work.
+This chapter concludes the thesis by discussing the most important contributions, limitations, promising avenues for future work, and broader reflections about the work.
 
 ## Contributions
 
@@ -29,20 +29,20 @@ Useful to base methodological developments on.
 
 Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW to enable implementation of the Global AIDS strategy.
 Risk group proportion estimates were used to disaggregate HIV prevalence and incidence estimates by behaviour, and assess the benefits of a variety of risk stratification strategies.
-This work is the basis for a tool now being used to prioritise delivery of HIV prevention services by countries in SSA.
+This work forms the basis for a tool used to prioritise delivery of HIV prevention services by countries in SSA.
 The tool is to be updated by UNAIDS as a part of the annual HIV estimates process.
-Alongside these applied contributions, Chapter \@ref(multi-agyw) exemplified specification of complex multinomial spatio-temporal models in `R-INLA` using the Poisson-multinomial transformation.
+Alongside these applied contributions, Chapter \@ref(multi-agyw) exemplified specification of complex multinomial spatio-temporal models in `R-INLA` using the Poisson-multinomial transformation, including using two- and three-way Kronecker product interactions.
 
 Chapter \@ref(naomi-aghq) developed deterministic Bayesian inference methods, motivated by a challenging and practically important problem in evidence synthesis for small-area estimation of HIV indicators.
 Its most important contributions are two-fold.
 First, an implementation of INLA which is compatible with models specified using a `TMB` C++ template.
-This contribution enables practitioners to fit essentially any model using INLA for the first time.
+Notably, this contribution enables practitioners to fit essentially any model using INLA for the first time.
 Second, a quadrature rule which naturally extends the applicability of INLA methods to moderate hyperparameter dimension.
 
 ## Limitations
 
-The work done in this thesis, particularly Chapters \@ref(beyond-borders) and \@ref(naomi-aghq), focused on generating understanding empirically, using experimentation and computation.
-This approach was chosen in part due to the complexity of the models and methods used in this thesis.
+The work done in this thesis, particularly Chapters \@ref(beyond-borders) and \@ref(naomi-aghq), focused on producing empirical evidence, using experimentation.
+In part, this approach reflects the complexity of the models and methods used in this thesis.
 Understanding complex systems from a theoretical perspective can be challenging.
 That being said, much of the work done in this thesis would benefit from closer integration with statistical theory.
 Though end-to-end theoretical understanding is unlikely, value could come from better understanding of limiting cases, simplified examples, and steps in complete procedures.
@@ -74,20 +74,21 @@ Theoretical work could be conducted in complement to the above empirical work de
 
 ## Broader reflections
 
-I found conducting the work in this thesis tested the boundaries of available statistical software.
-For example, it was challenging, if not impossible, to implement a common model using different software for inference.
+Conducting the work in this thesis involved testing the boundaries of available statistical software.
+For example, I found it challenging, if not impossible, to implement a common model using different inferential software.
 As the frequently asked questions section of the `R-INLA` website [@rinla2023faq] notes: "the devil is in the details".
-Similarly, I encountered difficulties implementing a desired collection of different models in a common software for inference.
+Similarly, I encountered difficulties implementing a desired collection of different models in a common inferential software.
 If not addressed, these difficulties would result in conflation of statistical models and inference methodologies, limiting the validity of any findings.
 Ultimately, I resolved these issues by implementing all models in Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) using `TMB` model templates.
 (Additionally, I would recommend implementing the model used in Chapter \@ref(multi-agyw) in `TMB` for future development.)
 Alongside being sufficiently flexible to meet my model specification requirements, `TMB` is compatible with a range of inference methodologies (including those contributed to in this thesis).
 As such, `TMB` remains [@osgood2023statistical] an under-rated statistical tool.
+In demonstrating some of its capabilities, I hope that this thesis might contribute to its wider adoption.
 
-There are various paths to impact for the work in this thesis.
-The methodological contributions of Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) could eventually lead to marginally more accurate indicator estimates.
-However, in the broader context of the HIV response effectiveness these improvements seem of limited consequence.
-The applied contributions of Chapter \@ref(multi-agyw) have a more promising case for direct impact.
+There are both direct and indirect paths to impact for the work in this thesis.
+Directly, the methodological contributions of Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) may eventually lead to marginally more accurate indicator estimates, contributing to a broadly more effective response.
+However, these improvements in accuracy seem of quite minor consequence within the broader context of the HIV response and the factors limiting its effectiveness.
+The applied contributions of Chapter \@ref(multi-agyw) have a more promising case for direct impact.Is
 
 To the best of my abilities, this thesis, and the work described within it, was written in keeping with the principles of open science.
 I hope that having done so facilitates my work to be scrutinised, and more optimistically, built upon.
