--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -20,7 +20,7 @@ Thank you to the Meridian, Trajan, and LEAH offices for hosting me this final ye
 Thank you to my housemates August, Dewi, Henry, Jerome, Johnny, and Tamara: not to be all Bay area, but I'm proud of the intentional community we've built.
 Pınar believed in me and my research at times when I didn't.
 No thanks to Simon Marshall, he didn't help, if anything he held me back.
-I extend my deepest thanks to my parents, Deborah and Karl, and my grandparents, Kath and Tony, whose love and support have granted me the privilege of purusing my interests.
+I extend my deepest thanks to my parents, Deborah and Karl, and my grandparents, Kath and Tony, whose love and support have granted me the privilege of pursuing my interests.
 
 \begin{flushright}
 Adam Howes \\
