--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -342,7 +342,11 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 
 ## Use of PCA-AGHQ
 
-(ref:nodes-quantiles-sd) Figure caption.
+```{r}
+u <- runif(10000)
+```
+
+(ref:nodes-quantiles-sd) The standard deviation of the quadrature nodes can be used as a measure of coverage of the posterior marginal distribution. Nodes spaced evenly within the marginal distribution would be expected to uniformly distributed quantile, corresponding to a standard deviation of `r signif(sd(u), 4)`, shown as a dashed line.
 
 ```{r nodes-quantiles-sd, fig.cap="(ref:nodes-quantiles-sd)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/nodes-quantiles-sd.png"))
