Add k = 3 to k = 7 Loa loa comparison

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -218,6 +218,8 @@ The data from cohort studies have particular use in informing otherwise difficul
 Such parameters include disease progression and mortality rates, transmission dynamics, and treatment outcomes.
 Examples of population-based cohort studies in SSA include the Manicaland Project Open Cohort Study in Zimbabwe [@gregson2006hiv], the Rakai Community Cohort Study in Uganda [@grabowski2017hiv], and the Karonga Demographic Surveillance Site in Malawi [@crampin2012profile].
 
+* **Key population surveys** ...
+
 ### Challenges
 
 Obtaining reliable, timely estimates of the HIV indicators at an appropriate spatial resolution using the available data sources is challenging.
