--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1498,11 +1498,11 @@ The approximate posterior exceedance probabilities from both GEB and GPCA-AGHQ h
 GEB and GPCA-AGHQ were substantially faster than NUTS, which took over two days to reach convergence.
 
 The inaccuracies in model outputs from GEB and GPCA-AGHQ have the potential to meaningfully mislead policy.
-As such, where possible gold-standard NUTS results should be computed.
+As such, where possible, gold-standard NUTS results should be computed.
 Though NUTS is to slow too run during a workshop, it could be run afterwards.
+Given that the UNAIDS HIV estimates process is ultimately annual, requiring days to compute more accurate estimates is viable.
 That said, Malawi is one of the countries with the fewest number of districts.
-As NUTS took days to run in Malawi, for larger countries, with hundreds of districts, it may not be possible to run NUTS to convergence.
-
+As NUTS took days to run in Malawi, for larger countries, with hundreds of districts, it may be impossible to run NUTS to convergence, and approximate methods may be required.
 GPCA-AGHQ and NUTS could be added to the Naomi web interface ([`https://naomi.unaids.org`](https://naomi.unaids.org)) as an alternative to GEB.
 Analysts would be able to quickly iterate over model options using EB, before switching to a more accurate approach once they are happy with the results.
 
