--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -69,8 +69,10 @@ The primary difficulty, as it appears now, which would have to be overcome is th
 For example, INLA-like methods can now be tested for a broader class of models, such as the Loa loa and Naomi ELGMs (Sections \@ref(loaloa) and \@ref(malawi)).
 For this purpose, it is particularly important that the `TMB` C++ template for the log-posterior supports inference using multiple methods, including gold-standard NUTS via `tmbstan`.
 Within this broader class of models, I wonder about the best way to achieve accurate results given a certain computational budget.
-For example, how should allocation of computational effort be traded-off between additional hyperparameter grid points and more accurate approximations of latent fields?
-Theoretical work could be conducted in complement to the above empirical work described above, benefited by exhaustive description of the INLA-like algorithms used.
+How should computational effort be traded-off between additional hyperparameter grid points and more accurate latent field approximations?
+For example, for the Loa loa ELGM, the accuracy benefit of using Laplace marginals was more than increasing the number of AGHQ nodes per dimension from $k = 3$ to $k = 7$ (Figure \@ref(fig:conditional-simulation-diff-k-fixed)).
+Additional theoretical work could be conducted to complement the empirical work described above.
+This work could be benefited by the exhaustive specification of the INLA-like algorithms used in this thesis.
 
 ## Broader reflections
 
