--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -57,6 +57,12 @@ knitr::include_graphics("figures/naomi-aghq/nuts-loa-loa.png")
 knitr::include_graphics("figures/naomi-aghq/loa-loa-mean-sd-pct.png")
 ```
 
+(ref:conditional-simulation-diff-k-fixed) Figure caption.
+
+```{r conditional-simulation-diff-k-fixed, fig.cap="(ref:conditional-simulation-diff-k-fixed)"}
+knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-k-fixed.png")
+```
+
 ## Simplified Naomi model description {#naomi-math}
 
 This section describes the simplified version of the Naomi model [@eaton2021naomi] in more detail.
