Update to multi-agyw applied contribution

--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -23,14 +23,15 @@ This chapter concludes the thesis by discussing the most important contributions
 
 ## Contributions
 
-Chapter \@ref(beyond-borders) used tools for model assessment such as proper scoring rules and posterior predictive checks to comprehensively compare models for spatial structure.
+Chapter \@ref(beyond-borders) used tools for model assessment such as proper scoring rules and posterior predictive checks to comprehensively compare adjacency- and kernel-based models for spatial structure.
 Useful data for practitioners.
 Useful to base methodological developments on.
 
-Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW to enable implementation of the Global AIDS strategy.
+Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW to enable implementation of the Global AIDS strategy [@unaids2021global].
 Risk group proportion estimates were used to disaggregate HIV prevalence and incidence estimates by behaviour, and assess the benefits of a variety of risk stratification strategies.
 This work forms the basis for a tool used to prioritise delivery of HIV prevention services by countries in SSA.
-The tool is to be updated by UNAIDS as a part of the annual HIV estimates process.
+At least 30 countries have now been included in the tool, extending from the 13 intially included [Figure 2.1; @unaids2023global].
+The models informing the tool will be rerun each year with updated data as a part of UNAIDS annual HIV estimates process.
 Alongside these applied contributions, Chapter \@ref(multi-agyw) exemplified specification of complex multinomial spatio-temporal models in `R-INLA` using the Poisson-multinomial transformation, including using two- and three-way Kronecker product interactions.
 
 Chapter \@ref(naomi-aghq) developed deterministic Bayesian inference methods, motivated by a challenging and practically important problem in evidence synthesis for small-area estimation of HIV indicators.
@@ -41,7 +42,7 @@ Second, a quadrature rule which naturally extends the applicability of INLA meth
 
 ## Limitations
 
-The work done in this thesis, particularly Chapters \@ref(beyond-borders) and \@ref(naomi-aghq), focused on producing empirical evidence, using experimentation.
+The work done in this thesis, particularly Chapters \@ref(beyond-borders) and \@ref(naomi-aghq), focused on producing empirical evidence experimentally.
 In part, this approach reflects the complexity of the models and methods used in this thesis.
 Understanding complex systems from a theoretical perspective can be challenging.
 That being said, much of the work done in this thesis would benefit from closer integration with statistical theory.
@@ -49,7 +50,7 @@ Though end-to-end theoretical understanding is unlikely, value could come from b
 
 In working most tangibly with real world data, Chapter \@ref(multi-agyw) inherits a wide range of limitations.
 To highlight a few:
-the external validity of risk ratios derived from cohort studies across all settings.
+the external validity of risk ratios derived from cohort studies.
 
 ## Future work
 
