--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -38,7 +38,7 @@ Chapter \@ref(naomi-aghq) developed deterministic Bayesian inference methods, mo
 Its most important contributions are two-fold.
 First, an implementation of INLA which is compatible with models specified using a `TMB` C++ template.
 Notably, this contribution enables practitioners to fit essentially any model using INLA for the first time.
-Second, a quadrature rule which naturally extends the applicability of INLA methods to moderate hyperparameter dimension.
+Second, a quadrature rule which naturally extends the applicability of INLA methods to moderate hyperparameter dimension, by combining PCA and AGHQ.
 
 ## Limitations
 
@@ -91,7 +91,7 @@ In demonstrating some of its capabilities, I hope that this thesis might contrib
 There are both direct and indirect paths to impact for the work in this thesis.
 Directly, the methodological contributions of Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) may eventually lead to marginally more accurate indicator estimates, contributing to a broadly more effective response.
 However, these improvements in accuracy seem of quite minor consequence within the broader context of the HIV response and the factors limiting its effectiveness.
-The applied contributions of Chapter \@ref(multi-agyw) have a more promising case for direct impact.Is
+The applied contributions of Chapter \@ref(multi-agyw) have a more promising case for direct impact.
 
 To the best of my abilities, this thesis, and the work described within it, was written in keeping with the principles of open science.
 I hope that having done so facilitates my work to be scrutinised, and more optimistically, built upon.
