Prepare for when these NUTS against AGHQ plots are ready

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -42,6 +42,27 @@ path <- paste0("resources/beyond-borders/", resource_version, "/depends/fck-aghq
 knitr::include_graphics(path)
 ```
 
+(ref:ck-aghq-nuts) A comparison of the posterior means and standard deviations obtained with AGHQ via `aghq` as compared with NUTS via `tmbstan` fitting a CK inferential model to IID synthetic data on the grid geometry (Panel \@ref(fig:geometries)E). For NUTS, the minimum ESS was `r round(aghq_nuts_comparison_diagnostics[6, "min_ess"])`, and the maximum value of the potential scale reduction factor was `r sprintf("%.2f", aghq_nuts_comparison_diagnostics[6, "max_rhat"])`.
+
+```{r ck-aghq-nuts, fig.cap="(ref:ck-aghq-nuts)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/ck-aghq-nuts.png")
+knitr::include_graphics(path)
+```
+
+(ref:fik-aghq-nuts) A comparison of the posterior means and standard deviations obtained with AGHQ via `aghq` as compared with NUTS via `tmbstan` fitting a FIK inferential model to IID synthetic data on the grid geometry (Panel \@ref(fig:geometries)E). For NUTS, the minimum ESS was `r round(aghq_nuts_comparison_diagnostics[5, "min_ess"])`, and the maximum value of the potential scale reduction factor was `r sprintf("%.2f", aghq_nuts_comparison_diagnostics[5, "max_rhat"])`.
+
+```{r fik-aghq-nuts, fig.cap="(ref:fik-aghq-nuts)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/fik-aghq-nuts.png")
+knitr::include_graphics(path)
+```
+
+(ref:ik-aghq-nuts) A comparison of the posterior means and standard deviations obtained with AGHQ via `aghq` as compared with NUTS via `tmbstan` fitting a IK inferential model to IID synthetic data on the grid geometry (Panel \@ref(fig:geometries)E). For NUTS, the minimum ESS was `r round(aghq_nuts_comparison_diagnostics[7, "min_ess"])`, and the maximum value of the potential scale reduction factor was `r sprintf("%.2f", aghq_nuts_comparison_diagnostics[7, "max_rhat"])`.
+
+```{r fck-aghq-nuts, fig.cap="(ref:fck-aghq-nuts)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/fck-aghq-nuts.png")
+knitr::include_graphics(path)
+```
+
 (ref:time-taken) A comparison of time taken to fit AGHQ via `aghq` as compared with NUTS via `tmbstan` for each inferential model.
 
 ```{r time-taken, fig.cap="(ref:time-taken)"}
